--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,7 @@ body {
     line-height: 1.87;
     background-color: var(--accent-color);
     color: var(--hero-text-color);
+    cursor: pointer;
 }
 
 /* main content */
