--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,21 @@ body {
     font-style: normal;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.title-hidden {
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+}
+
 /* Studio page */
 
 /* header */
@@ -41,7 +56,6 @@ body {
 }
 
 .list {
-    list-style: none;
     font-weight: 500;
     font-size: var(--primary-font-size);
     line-height: 1.14;
@@ -49,8 +63,7 @@ body {
 }
 
 .nav-bar-pages .link {
-    color: var(--title-text-color);
-    
+    color: var(--title-text-color);    
 }
 
 .nav-bar-pages .link:hover,
@@ -88,19 +101,24 @@ body {
 }
 
 .hero-btn {
+    padding: 10px 32px;
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.87;
-    background-color: var(--accent-color);
-    color: var(--hero-text-color);
+    line-height: 1.87;    
     cursor: pointer;
     text-align: center;
     letter-spacing: 0.06em;
+    display: flex;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    border: none;
-    width: 200px;
-    height: 50px;
+    border: transparent;
+    background-color: var(--accent-color);
+    color: var(--hero-text-color);
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+    background-color: #188CE8;
 }
 
 /* main content */
@@ -163,10 +181,6 @@ body {
     background-color: var(--hero-footer-bg-color);
 } 
 
-.address-list {
-    list-style: none;
-}
-
 .footer .link {
     text-decoration: none;    
 }
@@ -187,9 +201,9 @@ body {
 }
 
 .address {
-    font-weight: 400;
     font-size: var(--primary-font-size);
     line-height: 1.71;
+    font-style: normal;
 }
 .address-list .link {
     color: rgba(255, 255, 255, 0.6);
@@ -208,64 +222,53 @@ body {
 /* Портфолио */
 
 .container {
-    background-color: var(--hero-text-color)    
+      
 }
 
-.section-filter,
+.filter {
+    display: flex;
+    margin-bottom: 34px;
+}
+
+
+.filter-btn {  
+    padding: 6px 24px;  
+    border-radius: 4px;
+    min-width: 73px;
+    border: transparent;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    color: var(--title-text-color);
+    background: #F5F4FA;
+}
+
+.filter .current {
+    background-color: var(--accent-color);
+    color: var(--hero-text-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
+                0px 1px 2px rgba(0, 0, 0, 0.08), 
+                0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.filter-btn:hover,
+.filter-btn:focus {
+    background-color: var(--accent-color);
+    color: var(--hero-text-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 
+                0px 1px 2px rgba(0, 0, 0, 0.08), 
+                0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 .cards {
     list-style: none;
 }
 
-.btn {
-    background-color: var(--secondary-bg-color);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    text-align: center;
-    cursor: pointer;
-    border: none;
-}
-    
 
-.btn:hover,
-.btn:focus {
-    background-color: var(--accent-color);
-}
-
-.btn-first {
-    width: 79.43px;
-    height: 38px;    
-    border-radius: 4px;
-} 
-
-.section .current {
-    background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
- 
-.btn-second {
-    width: 139.27px;
-    height: 38px;    
-    border-radius: 4px;
-}
-.btn-third {
-    width: 157.76px;
-    height: 38px;
-}
-
-.btn-fourth {
-    width: 112.07px;
-    height: 38px;
-}
-
-.btn-fifth {
-    width: 141.44px;
-    height: 38px;
-}
-
-.cards-title,
-.btn {
+.cards-title {
     color: var(--title-text-color);
 }
 
